html/themes/custom/common_design_subtheme/css/styles.css
/* .cd-global-header,
.js .cd-global-header__actions > * {
  background: var(--brand-grey);
}

.cd-header button,
.cd-footer button {
  color: var(--cd-default-text-color);
}

button[aria-expanded] .cd-icon--arrow-down {
  fill: var(--cd-default-text-color);
}

.cd-ocha__logo {
  fill: var(--cd-default-text-color);
}

.cd-global-header__dropdown {
  background: var(--brand-grey);
}

.cd-ocha-dropdown__heading,
.cd-global-header__dropdown a,
.cd-global-header__dropdown a:hover {
  color: var(--cd-default-text-color);
}

.cd-user-menu__dropdown li a {
  color: var(--cd-default-text-color);
}

.cd-global-header button[aria-expanded="true"]::before {
  border-color: transparent transparent var(--brand-grey);
}

.language-switcher-language-url ul li a {
  color: var(--cd-default-text-color);
}
.language-switcher-language-url ul li a::before {
  background: var(--cd-default-text-color);
}

.js .cd-global-header__language-switcher + .cd-global-header__user-menu::before {
  background: var(--cd-default-text-color);
}

.cd-user-menu svg,
.cd-global-header .menu svg {
  fill: var(--cd-default-text-color);
}

.cd-user-menu__item,
.cd-global-header .menu>li a,
.cd-global-header .menu>li button {
  color: var(--cd-default-text-color);
} */

.cd-global-header {
  background: var(--brand-primary--dark);
}

.js .cd-global-header__actions {
  background: linear-gradient(to bottom, var(--brand-primary--dark), var(--brand-primary--dark) 33.33%, var(--cd-white) 33.33%, var(--cd-white) 66.66%, var(--brand-primary--dark) 66.66%);
}

.js .cd-global-header__actions > * {
  background: var(--brand-primary--dark);
}

.cd-layout-highlighted {
  background: var(--brand-primary);
}

.cd-global-header__dropdown {
  background: var(--brand-primary--dark);
}

.cd-global-header button[aria-expanded="true"]::before {
  border-color: transparent transparent var(--brand-primary--dark);
}
.cd-language-switcher__dropdown {
  background-color: var(--brand-primary--dark);
}

/* Paragraphs */
.paragraph {
  margin: 4rem 0 4rem;
}

.paragraph > .field {
  margin-bottom: 1rem;
}

.paragraph > .field--name-field-title {
   margin-bottom: 2rem;
 }

/* Nodes and Terms */
.layout + .layout {
  margin-top: 2rem;
}

.paragraph--type--node-teaser>.field > .field__items > .field__item {
  margin-bottom: 2rem;
}

.field--name-body + .field--name-field-custom-content {
  margin-top: 2rem;
}

.field--name-field-custom-content > .field__item + .field__item {
  margin-top: 6rem;
}


.field--label-inline {
  display: flex;
}

.field--label-inline > .field__label {
  margin-inline-end: 0.5rem;
}

.field--label-inline > .field__label::after {
  content: ':'
}

/* Restrict width and centre horizontally */
.node--type-landing-page .cd-page-title,
.node--type-landing-page .field--name-body,
.node--type-landing-page .field--name-description,
.node--type-landing-page .field--name-field-text,
.node--type-landing-page .field--name-field-title,
.node--type-landing-page .paragraph--type--list--teaser,
.taxonomy-term--country .field--name-description,
.taxonomy-term--country .field--name-field-text,
.taxonomy-term--country .field--name-field-title,
.paragraph--type--rss-feed,
.paragraph--type--reliefweb-document,
.paragraph--type--reliefweb-river,
.viewsreference--view-title {
  max-width: var(--cd-max-content-width);
  margin-left: auto;
  margin-right: auto;
}

.node--type-landing-page .field--name-body,
.node--type-landing-page .field--name-description,
.node--type-landing-page .field--name-field-text,
.node--type-landing-page .field--name-field-title,
.taxonomy-term--country .field--name-field-text,
.taxonomy-term--country .field--name-field-title {
  margin-top: 2rem;
  margin-bottom: 4rem;
}

.node--type-landing-page .field--name-field-title,
.taxonomy-term--country .field--name-field-title,
.viewsreference--view-title {
  margin-bottom: 2rem;
}

.paragraph--type--text-and-image .field--name-field-text>p:first-child,
.paragraph--type--text .field--name-field-text > p:first-child {
  margin-top: 0;
}

/* Paragraph Text and Image with alignment */
@media screen and (min-width: 768px) {
  .paragraph--type--text-and-image.paragraph--view-mode--image-align-left,
  .paragraph--type--text-and-image.paragraph--view-mode--image-align-right {
    display: flex;
    flex-wrap: wrap;
  }
  .paragraph--view-mode--image-align-left .field--name-field-image,
  .paragraph--view-mode--image-align-right .field--name-field-image {
    flex: 0 1 50%;
  }
  .paragraph--view-mode--image-align-left .field--name-field-text,
  .paragraph--view-mode--image-align-right .field--name-field-text {
    flex: 0 1 50%;
  }

  .field--name-field-title {
    flex: 1 0 100%;
  }

  .paragraph--view-mode--image-align-left .field--name-field-text {
    padding-inline-start: 4rem;
  }
  .paragraph--view-mode--image-align-right .field--name-field-text,
  .paragraph--view-mode--image-align-right .field--name-field-title {
    padding-inline-end: 4rem;
    text-align: left;
  }
}

.paragraph__image--align-center .field--name-field-title,
.paragraph__image--align-center .field--name-field-text {
  text-align: left;
}
.paragraph__image--align-center .field--name-field-media-image .field__item img {
  display: inline-block;
  margin: 0 auto;
}

.paragraph--type--call-to-action.cd-bleed {
  margin-right: calc(50% - 50vw + var(--cd-bleed-scrollbar-width) / 2);
  margin-left: calc(50% - 50vw + var(--cd-bleed-scrollbar-width) / 2);
  background-color: var(--brand-grey);
}

/* Video embed */
.field--name-field-video .field--name-field-media-oembed-video {
  position: relative;
  float: none;
  clear: both;
  width: 100%;
  height: 0;
  padding-top: 25px;
  padding-bottom: 56.25%;
}

.field--name-field-video .field--name-field-media-oembed-video iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.cd-soft-footer {
  text-align: left;
}
.cd-soft-footer h3 {
  color: white;
}
.cd-soft-footer ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

/* Hide fields to use as Heros */
.node--view-mode-full .field--name-field-landing-page-image,
.node--view-mode-full .field--name-field-article-image-caption,
.taxonomy-term--full .field--name-field-country-image {
  display: none;
}

/* Set bg colour so when menu items break layout, we can see them */
.cd-nav__menu-item--level-1 {
  background-color: white;
}

/* Last menu item with coloured background */
.cd-nav > .menu > .menu-item:last-child a {
  background: var(--brand-highlight);
  color: white;
}

.cd-soft-footer,
.cd-footer {
  color: var(--cd-default-text-color);
  background: var(--brand-grey);
}

.cd-soft-footer .cd-soft-footer__inner .cd-soft-footer__nav-wrapper nav {
  margin-bottom: 1rem;
}

@media screen and (min-width: 575px) {
  .cd-soft-footer .cd-soft-footer__inner .cd-soft-footer__nav-wrapper {
    display: flex;
    flex-wrap: wrap;
    align-items: flex-start;
  }

  .cd-soft-footer .cd-soft-footer__nav-wrapper > nav {
    flex: 0 1 50%;
  }
}
@media screen and (min-width: 1024px) {
  .cd-soft-footer .cd-soft-footer__nav-wrapper > nav {
    flex: 0 1 33%;
  }
}

.cd-footer a,
.cd-soft-footer a,
.cd-soft-footer h2 {
  color: var(--cd-default-text-color);
}

.cd-footer a:hover,
.cd-soft-footer a:hover,
.cd-soft-footer a:focus {
  color: var(--cd-default-text-color);
}

.cd-soft-footer__nav-responses {
  color: var(--brand-highlight-contract);
  background-color: var(--brand-highlight);
  padding: 1rem;
}


a.cd-footer-social__link svg {
  fill: var(--brand-primary);
}

.cd-footer-copyright svg {
  fill: var(--cd-default-text-color);
}

.cd-mandate__logo {
  background: url("../img/logos/ocha-lockup.svg") 0 center no-repeat;
}

.uno-subscribe {
  padding: 3rem 0 2rem;
}

.uno-featured  {
  display: inline-block;
  color: var(--brand-highlight-contract);
  background-color: var(--brand-highlight);
  padding: 0 1rem;
 }

.views-exposed-form.cd-form .cd-form--inline,
.views-exposed-form.cd-form .cd-form--inline label,
.views-exposed-form.cd-form .cd-form--inline .cd-form__item {
  display: block;
}

@media (min-width: 767px) {
  .views-exposed-form.cd-form .cd-form--inline {
    display: flex;
    flex-wrap: wrap;
    align-items: flex-end;
    justify-content: space-between;
  }

  .views-exposed-form.cd-form .cd-form--inline > div {
    flex: 1 0 20%;
    max-width: 20%;
  }

  .views-exposed-form.cd-form .cd-form--inline .form-actions {
    text-align: right;
  }
}

/* Story node */
footer.cd-author {
  margin-top: 3rem;
  padding: 1rem 0;
  border-top: 1px solid var(--brand-grey);
}

/* Centre content horizontally with max-width limit */
.cd-layout-main-content .paragraph--type--text,
.cd-layout-main-content .field--type-text-with-summary,
.cd-layout-main-content footer,
.cd-layout-main-content .cd-caption {
  max-width: var(--cd-max-content-width);
  margin-left: auto;
  margin-right: auto;
}

